# edupage-killer

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  index.html
backend/: pyproject.toml
backend/apps/accounts/: admin.py  models.py  schema.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_initial.py
backend/apps/assignments/: admin.py  models.py  schema.py  serializers.py  urls.py  views.py
backend/apps/assignments/migrations/: 0001_initial.py
backend/apps/assignments/tests/: test_views.py
backend/apps/attendance/: admin.py  models.py  schema.py  serializers.py  urls.py  views.py
backend/apps/attendance/migrations/: 0001_initial.py
backend/apps/attendance/tests/: test_views.py
backend/apps/chat/: admin.py  consumers.py  models.py  routing.py  schema.py  serializers.py  urls.py  views.py
backend/apps/chat/migrations/: 0001_initial.py
backend/apps/edupage_sync/: admin.py  models.py  serializers.py  service.py  tasks.py  urls.py  views.py
backend/apps/edupage_sync/migrations/: 0001_initial.py
backend/apps/materials/: admin.py  models.py  schema.py  serializers.py  urls.py  views.py
backend/apps/materials/migrations/: 0001_initial.py
backend/apps/notes/: admin.py  models.py  schema.py  serializers.py  urls.py  views.py
backend/apps/notes/migrations/: 0001_initial.py
backend/apps/timetable/: admin.py  models.py  schema.py  serializers.py  urls.py  views.py
backend/apps/timetable/migrations/: 0001_initial.py
backend/config/: asgi.py  celery.py  schema.py  urls_test.py
backend/config/settings/: base.py  production.py  test.py
(+72 files in other folders)
