[project]
name = "edupage-killer-backend"
version = "0.1.0"
description = "EduPage alternative backend"
requires-python = ">=3.12,<3.15"
dependencies = [
    "django>=5.1",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "strawberry-graphql[django]>=0.235",
    "strawberry-graphql-django>=0.50",
    "channels[daphne]>=4.1",
    "channels-redis>=4.2",
    "django-allauth[socialaccount]>=0.63",
    "dj-rest-auth[with_social]>=7.0",
    "psycopg[binary]>=3.2",
    "celery[redis]>=5.4",
    "django-celery-beat>=2.6",
    "redis>=5.1",
    "django-storages[boto3]>=1.14",
    "Pillow>=10.4",
    "django-cors-headers>=4.4",
    "django-filter>=24.3",
    "edupage-api>=0.12.4",
    "python-decouple>=3.8",
    "daphne>=4.1",
]

[dependency-groups]
dev = [
    "black>=24.8",
    "ruff>=0.6",
    "mypy>=1.11",
    "django-stubs[compatible-mypy]>=5.1",
    "djangorestframework-stubs>=3.15",
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-asyncio>=0.24",
    "factory-boy>=3.3",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
strict = true
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings.development"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
